[package]
edition = "2021"
name = "uprn_match"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
rusqlite = "0.28.0"
serde = {version = "1", features = ["derive"]}

